Adicionando Google Fonts e links

--- a/index.html
+++ b/index.html
@@ -26,9 +26,27 @@
                     <h5 class="card-title">Sinopse e detalhes</h5>
                     <p class="card-text text">Los Angeles, 1969. Rick Dalton (Leonardo DiCaprio) é um ator de TV que, juntamente com seu dublê, está decidido a fazer o nome em Hollywood. Para tanto, ele conhece muitas pessoas influentes na indústria cinematográfica, o que os acaba levando aos assassinatos realizados por Charles Manson na época, entre eles o da atriz Sharon Tate (Margot Robbie), que na época estava grávida do diretor Roman Polanski (Rafal Zawierucha).</p>
                     <h5 class="card-title">Elenco</h5>
-                    <p class="card-text text">Al Pacino | Brad Pitt | Dakota Fanning | Kurt Russell | Leonardo DiCaprio | Margaret Qualley | Margot Robbie | Timothy Olyphant</p>
+                    <p class="card-text text">
+                        <a href="https://pt.wikipedia.org/wiki/Al_Pacino" target="_blank" rel="noopener noreferrer">Al Pacino</a>
+                        |
+                        <a href="https://pt.wikipedia.org/wiki/Brad_Pitt" target="_blank" rel="noopener noreferrer">Brad Pitt</a>
+                        |
+                        <a href="https://pt.wikipedia.org/wiki/Dakota_Fanning" target="_blank" rel="noopener noreferrer">Dakota Fanning</a> 
+                        |
+                        <a href="https://pt.wikipedia.org/wiki/Kurt_Russell" target="_blank" rel="noopener noreferrer">Kurt Russell</a>
+                        |
+                        <a href="https://pt.wikipedia.org/wiki/Leonardo_DiCaprio" target="_blank" rel="noopener noreferrer">Leonardo DiCaprio</a>
+                        |
+                        <a href="https://pt.wikipedia.org/wiki/Margaret_Qualley" target="_blank" rel="noopener noreferrer">Margaret Qualley</a>
+                        |
+                        <a href="https://pt.wikipedia.org/wiki/Margot_Robbie" target="_blank" rel="noopener noreferrer">Margot Robbie</a>
+                        |
+                        <a href="https://pt.wikipedia.org/wiki/Timothy_Olyphant" target="_blank" rel="noopener noreferrer">Timothy Olyphant</a>
+                    </p>
                     <h5 class="card-title">Direção</h5>
-                    <p class="card-text">Quentin Tarantino</p>
+                    <p class="card-text">
+                        <a href="https://pt.wikipedia.org/wiki/Quentin_Tarantino" target="_blank" rel="noopener noreferrer">Quentin Tarantino</a>
+                    </p>
                     <div class="row">
                         <div class="col-md-3 col-sm-12 space"></div>
                         <div class="col-md-3 col-sm-12 space">
