--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Site para venda de filmes">
     <title>Movie Store</title>
     <!-- CSS nativo -->
     <link rel="stylesheet" href="css/style.css">
